--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -4,7 +4,7 @@
         <aside>
             {% block aside %}{% endblock %}
         </aside>
-        <article data-layout="stack" style="--space: var(--space-2xl, 3rem);">
+        <article data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
             {% block main %}{% endblock %}
         </article>
     </div>
