--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -12,7 +12,7 @@
   --step-6: clamp(2.03rem, calc(0.21rem + 9.06vw), 7.01rem);
 
   /* @link https://utopia.fyi/space/calculator/?c=320,16,1.125,1200,20,1.333,6,1,&s=0.75,1.5%7C2%7C3%7C4%7C5,m-2xl%7Cs-3xl */
-  --space-2xs: clamp(0.50rem, calc(0.45rem + 0.23vw), 0.63rem);
+  --space-2xs: clamp(0.5rem, calc(0.45rem + 0.23vw), 0.63rem);
   --space-xs: clamp(0.75rem, calc(0.68rem + 0.34vw), 0.94rem);
   --space-s: clamp(1rem, calc(0.91rem + 0.45vw), 1.25rem);
   --space-m: clamp(1.5rem, calc(1.36rem + 0.68vw), 1.88rem);
@@ -30,7 +30,7 @@
   /* Custom pairs */
   --space-m-2xl: clamp(1.5rem, calc(0.23rem + 6.36vw), 5rem);
   --space-s-3xl: clamp(1rem, calc(-0.91rem + 9.55vw), 6.25rem);
-  --space-s-6xl: clamp(1.00rem, calc(-2.27rem + 16.36vw), 10.00rem);
+  --space-s-6xl: clamp(1rem, calc(-2.27rem + 16.36vw), 10rem);
 
   --measure: 80ch;
 
@@ -48,6 +48,22 @@
   --gray-700: rgb(63, 63, 70);
   --gray-800: rgb(39, 39, 42);
   --gray-900: rgb(24, 24, 27);
+
+
+  --shadow-color: 240deg 2% 66%;
+  --shadow-elevation-low:
+    0px 0.6px 0.7px hsl(var(--shadow-color) / 0.41),
+    0px 2.1px 2.4px -2.5px hsl(var(--shadow-color) / 0.41);
+  --shadow-elevation-medium:
+    0px 0.6px 0.7px hsl(var(--shadow-color) / 0.39),
+    0px 2.8px 3.1px -1.2px hsl(var(--shadow-color) / 0.39),
+    0px 10.7px 12px -2.5px hsl(var(--shadow-color) / 0.39);
+  --shadow-elevation-high:
+    0px 0.6px 0.7px hsl(var(--shadow-color) / 0.43),
+    0px 4.7px 5.3px -0.6px hsl(var(--shadow-color) / 0.43),
+    0px 11px 12.4px -1.2px hsl(var(--shadow-color) / 0.43),
+    -0.1px 23.9px 26.9px -1.9px hsl(var(--shadow-color) / 0.43),
+    -0.2px 48px 54px -2.5px hsl(var(--shadow-color) / 0.43);
 }
 /*----------  TOKENS Utilities  ----------*/
 [data-props~="noPad"] {
@@ -120,7 +136,7 @@
 [data-props~="noCurve"] {
   --border-radius: 0;
 }
-[data-props~="noMeasure"]{
+[data-props~="noMeasure"] {
   --measure: initial;
 }
 
