--- a/src/pages/feed.njk
+++ b/src/pages/feed.njk
@@ -1,13 +1,15 @@
 ---
 permalink: "feed.xml"
-eleventyExcludeFromCollections: true
-title: "Frontend Stories"
+eleventyExcludeFromCollections: false
+tags:
+    - webpage
+title: "RSS"
 subtitle: "Collection of research findings about frontend development"
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ meta.site_url}}" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
-    <title>{{ title }}</title>
+    <title>{{ meta.site_name }}</title>
     <link>{{ meta.site_url }}</link>
     <atom:link href="{{ permalink | absoluteUrl(meta.site_url) }}" rel="self" type="application/rss+xml" />
     <description>{{ subtitle }}</description>
