--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -2,8 +2,6 @@
 layout: layouts/home-layout.njk
 title: "Home"
 description: A collection of research findings, insights on frontend development.
-about: >-
-    Frontend Stories 2022 ©
 tags: 
     - webpage
 pagination: 
@@ -18,7 +16,7 @@ eleventyComputed:
 ---
 
 {# <article data-layout="stack" data-props="space:2xl"> #}
-<section>
+<section data-layout="cover">
     <div data-layout="stack" data-props="centered space:m">
         <div data-layout="stack">
             <h1 data-heading="2">{{meta.site_name}}</h1>
@@ -29,8 +27,7 @@ eleventyComputed:
         </div>
     </div>
 </section>
-<section id="stories" data-layout="stack" data-props="space:m">
-    <h2 data-heading="5">Browsing {{currentCategory}} stories</h2>
+<section id="stories" data-layout="stack" data-props="space:xs">
     <nav class="categories-navigation">
         <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
             {%- for category in collections.categoriesAndAll %}
@@ -40,8 +37,9 @@ eleventyComputed:
             {% endfor -%}
         </ul>
     </nav>
+    <h2 data-heading="5"> {{currentCategory}} </h2>
     <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
-        {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(6) %}
+        {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(3) %}
         {%- for entry in entries %}
             {% include "partials/story-card-entry.njk" %}
         {% endfor -%}
