feat - add full content to RSS feed

--- a/src/pages/feed.njk
+++ b/src/pages/feed.njk
@@ -21,6 +21,11 @@ subtitle: "Collection of research findings about frontend development"
       <title>{{ story.name }}</title>
       <link>{{ absoluteStoryUrl }}</link>
       <description><![CDATA[{{ story.excerpt | safe }}]]></description>
+      <content:encoded>
+        <![CDATA[{% renderTemplate "md, liquid", story %}
+            {{ description }}
+        {% endrenderTemplate %}]]>
+      </content:encoded>
       <pubDate>{{ story.edited | buildRFC822Date }}</pubDate>
       <dc:creator>{{ meta.author.name }}</dc:creator>
       <guid>{{ absoluteStoryUrl }}</guid>
