--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -1,24 +1,25 @@
 <head>
+    {% set meta_title = meta.site_name if page.url === "/" else meta.site_name + " - " + title or " " %}}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ meta.site_name if page.url === "/" else meta.site_name + " - " + title or " " }}</title>
+    <title>{{meta_title}}</title>
     <meta name="description" content="{{description or meta.site_description}}">
     <link rel="stylesheet" href="/css/style.css">
     <meta name="theme-color" content="{{meta.theme_color}}">
     <meta name="apple-mobile-web-app-status-bar-style" content="{{meta.theme_color}}">
-    <meta name="title" content="{{meta.site_name if page.url === "/" else meta.site_name + " - " + title or " "}}">
+    <meta name="title" content="{{meta_title}}">
     <meta name="generator" content="{{ eleventy.generator }}">
     <link rel="alternate" type="application/rss+xml" href="{{ meta.site_url }}/feed.xml" />
     <!-- Open graph - Facebook 1200 x 628 -->
     <link rel="canonical" href="{{meta.site_url}}{{page.url}}">
-    <meta property="og:image" content="{{meta.site_thumbnail or thumbnail }}">
+    <meta property="og:image" content="{{ thumbnail or meta.site_thumbnail }}">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:width" content="628">
     <meta property="og:site_name" content="{{meta.site_name}}">
     <meta property="og:type" content="{{og_type or "website"}}">
     <meta property="og:url" content="{{meta.site_url}}{{page.url}}">
-    <meta property="og:title" content="{{meta.site_name if page.url === "/" else meta.site_name + " - " + title or " "}}">
+    <meta property="og:title" content="{{meta_title}}">
     <meta property="og:description" content="{{description or meta.site_description}}">
     <!-- Open graph - Twitter -->
     <meta name="twitter:image" content="{{meta.site_thumbnail or thumbnail }}">
