--- a/src/pages/feed.njk
+++ b/src/pages/feed.njk
@@ -14,17 +14,12 @@ subtitle: "Collection of research findings about frontend development"
     <atom:link href="{{ permalink | absoluteUrl(meta.site_url) }}" rel="self" type="application/rss+xml" />
     <description>{{ subtitle }}</description>
     <language>{{ meta.lang }}</language>
-    {%- for story in collections.stories | reverse %}
+        {%- for story in collections.stories | reverse %}
         {%- set absoluteStoryUrl = story.slug | absoluteUrl(meta.site_url)  %}
-        {{story.slug | absoluteUrl(meta.site_url) | url | log}}
     <item>
       <title>{{ story.name }}</title>
       <link>{{ absoluteStoryUrl }}</link>
-      <description>
-        <![CDATA[{% renderTemplate "md, liquid", story %}
-            {{ description }}
-        {% endrenderTemplate %}]]>
-      </description>
+      <description><![CDATA[{{ story.excerpt | safe }}]]></description>
       <pubDate>{{ story.edited | buildRFC822Date }}</pubDate>
       <dc:creator>{{ meta.author.name }}</dc:creator>
       <guid>{{ absoluteStoryUrl }}</guid>
