--- a/src/pages/stories/stories-thumbnails.njk
+++ b/src/pages/stories/stories-thumbnails.njk
@@ -10,7 +10,6 @@ eleventyExcludeFromCollections: true
 <svg width="1200" height="628" viewBox="0 0 1200 628" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
     {% set titleInLines = story.name | splitlines %}
-    {% set icon = story.icon %}
     {% set numberOfLines = titleInLines.length %}
     {% if numberOfLines == 1 %}
         {% set verticalStartingPoint = 340 %}
@@ -25,8 +24,8 @@ eleventyExcludeFromCollections: true
 
     <rect width="100%" height="100%" fill="{{meta.background_color or 'white'}}" />
 
-    <text text-anchor="start" font-family="'Noto Emoji', sans-serif" font-size="100">
-        <tspan  x="80" y="350">{{icon}}</tspan>
+    <text text-anchor="start" font-family="Helvetica, sans-serif" font-size="100">
+        <tspan  x="80" y="350">🎓</tspan>
     </text>
 
     <line x1="300" y1="80" x2="300" y2="548" stroke="black" />
@@ -35,7 +34,7 @@ eleventyExcludeFromCollections: true
         <tspan x="350" y="{{verticalStartingPoint - 90}}">{{ meta.site_name }}</tspan>
     </text>
     
-    <text id="text" font-family="Helvetica, sans-serif" font-size="80" font-weight="bold">
+    <text id="text" font-family="Helvetica, sans-serif" font-size="70" >
     {% for line in titleInLines %}
         <tspan x="350" y="{{verticalStartingPoint + loop.index0 * 80}}">{{line}}</tspan>
     {% endfor %}
