--- a/src/pages/home-page.njk
+++ b/src/pages/home-page.njk
@@ -19,11 +19,11 @@ eleventyComputed:
 <section data-layout="cover">
     <div data-layout="stack" data-props="centered space:m">
         <div data-layout="stack">
-            <h1 data-heading="2">{{meta.site_name}}</h1>
+            <h1 data-heading="2">{{ meta.site_name }}</h1>
             <p>{{ description or meta.site_description }}</p>
             {# <div>
-                <a data-button href="/stories">Browse all stories</a>
-            </div> #}
+                            <a data-button href="/stories">Browse all stories</a>
+                        </div> #}
         </div>
     </div>
 </section>
@@ -31,13 +31,18 @@ eleventyComputed:
     <nav class="categories-navigation">
         <ul role="list" data-layout="reel" data-props="noPad noBorder overflowing:noBar">
             {%- for category in collections.categoriesAndAll %}
-                <li data-layout="stack"  data-active="{{ 'true' if currentCategory == category else 'false' }}">
-                    <a data-props="x:center" data-button="{{'active' if currentCategory == category}}" href="/{{ '' if category == 'All' else category | slugify }}#stories">{{ 'Latest' if category == 'All' else category }}</a>
+                <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
+                    <a data-props="x:center" data-button="{{ 'active' if currentCategory == category }}" href="/{{ '' if category == 'All' else category | slugify }}#stories">{{ 'Latest' if category == 'All' else category }}</a>
                 </li>
             {% endfor -%}
         </ul>
     </nav>
-    <h2 data-heading="5"> {{currentCategory}} </h2>
+    <div data-layout="cluster" data-props="x:between">
+        <h2 data-heading="5">
+            {{ currentCategory }}
+        </h2>
+        <a data-button href="/{{ 'stories' if currentCategory == 'All' else "categories/"+currentCategory | slugify}}">View all</a>
+    </div>
     <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
         {% set entries = collections.stories | filterByCategory(currentCategory) | limitTo(3) %}
         {%- for entry in entries %}
