--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -1,10 +1,10 @@
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
     <div class="story-with-sidebar" data-layout="with-sidebar" data-props="side:left">
-        <aside>
+        <aside id="story-details">
             {% block aside %}{% endblock %}
         </aside>
-        <article data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
+        <article itemscope itemtype="http://schema.org/BlogPosting" itemref="story-details" data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
             {% block main %}{% endblock %}
         </article>
     </div>
