--- a/src/css/_globals.css
+++ b/src/css/_globals.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: var(--font-body);
+  font-family: var(--font-serif);
   font-size: var(--step-0);
   background-color: var(--color-light);
 }
@@ -16,7 +16,8 @@ h2,
 h3, h4, h5, h6 {
   line-height: 1.2;
   max-width: 40ch;
-  /* font-weight: normal; */
+  font-weight: normal;
+  font-family: var(--font-sans-serif);
   /* text-transform: capitalize; */
 }
 h1,
