--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -28,7 +28,7 @@ main {
   width: 100%;
   min-height: var(--header-height);
   box-shadow: var(--shadow-elevation-low);
-  position: fixed;
+  /* position: fixed; */
   background-color: var(--color-light);
   z-index: 10;
 }
@@ -93,7 +93,14 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 
 [data-markdown] {
   /* Remove width constraints from generated markdown */
-  --measure: 60ch;
+  --measure: 100ch;
+  --space: 1em;
+  font-size: var(--step-1);
+}
+[data-markdown] p{
+  color: var(--gray-600);
+  --space: 0.5em;
+
 }
 
 [data-markdown] > ol {
@@ -109,8 +116,11 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   padding-left: 0;
 }
 [data-markdown] h3 {
-  font-size: var(--step-0);
+  /* font-size: var(--step-2); */
+  /* padding-top: 1em; */
   /* font-weight: normal; */
+  text-transform: lowercase;
+  /* color: var(--gray-700); */
 }
 [data-markdown] code {
   border: 1px solid var(--gray-400);
@@ -205,12 +215,12 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 
 .story-card {
   overflow: hidden;
-  padding: var(--space-xs) var(--space-xs);
+  padding: var(--space-l) var(--space-xs);
   border-radius: var(--border-radius);
   position: relative;
   background-color: var(--gray-50);
-  border: var(--border-thin) solid var(--gray-200);
-  box-shadow: var(--shadow-elevation-low);
+  border: var(--border-thin) solid var(--gray-400);
+  /* box-shadow: var(--shadow-elevation-low); */
   transition-property: box-shadow, transform;
   transition-duration: 0.3s;
   transition-timing-function: var(--bezier-snappy);
@@ -218,24 +228,28 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 .story-card:hover,
 .story-card:focus-within {
   box-shadow: var(--shadow-elevation-medium);
-  transform: translateY(calc(-1 * var(--space-2xs)));
+  /* transform: translateY(calc(-1 * var(--space-2xs))); */
 }
-.story-card__cover {
-  height: 150px;
-  color: var(--gray-600);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+/* .story-card__cover { */
+  /* height: 150px; */
+  /* color: var(--gray-600); */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+/* } */
 .story-card__ribbon {
    right: -64px;
+   font-family: var(--font-sans-serif);
    position: absolute;
    top: 32px;
-   height: 24px;
    width: 206px;
    transform: rotate(45deg);
    background-color: var(--gray-300);
    text-align: center;
+}
+.story-card__title{
+  font-family: var(--font-sans-serif);
+  font-weight: bolder;
 }
 .story-card__title:focus {
   outline: 0px;
@@ -334,4 +348,9 @@ textarea {
   border: var(--border-thin) solid;
   border-color: var(--gray-600);
   width: 100%;
+}
+
+.reference-item{
+  --measure: 100ch;
+  list-style-type: circle;
 }
