feat - switch from blogposting to Article

--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -4,7 +4,7 @@
         <aside id="story-details">
             {% block aside %}{% endblock %}
         </aside>
-        <article itemscope itemtype="http://schema.org/BlogPosting" itemref="story-details" data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
+        <article itemscope itemtype="http://schema.org/Article" itemref="story-details" data-layout="stack" style="--space: calc(var(--space-xl) * 2);">
             {% block main %}{% endblock %}
         </article>
     </div>
