--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,4 +1,4 @@
-<li itemscope itemtype="http://schema.org/BlogPosting" class="story-card">
+<li itemscope itemtype="http://schema.org/Article" class="story-card">
     {% set color = entry.category.color %}
     {% set type = entry.type.name %}
     {# <span>{{ entry.category.name }}</span> #}
@@ -8,5 +8,6 @@
     <div class="story-card__cover" data-font="emoji" data-color="{{ color }}" aria-hidden="true">
         <span data-heading="4">{{ entry.icon if entry.icon else '📄' }}</span>
     </div>
-    <a itemprop="name" data-link="noHover" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
+    <a itemprop="url" data-link="noHover" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
+    <meta itemprop="headline" content="{{entry.name}}"/>
 </li>
