--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -22,39 +22,38 @@ main {
   padding-top: var(--page-top);
   padding-bottom: var(--page-top);
   color: var(--gray-900);
+  font-size: var(--step-1);
 }
 
 .header {
   width: 100%;
   min-height: var(--header-height);
   box-shadow: var(--shadow-elevation-low);
-  /* position: fixed; */
-  background-color: var(--color-light);
-  z-index: 10;
+  background-color: var(--gray-50);
 }
 
 /*=============================================
 =            Story   styles TODO: extract         =
 =============================================*/
 .story-with-sidebar {
-  --side-width: calc(var(--space-l-xl, 2rem) * 3);
+  --side-width: calc(var(--space-l-xl, 2rem) * 4);
   --content-min: 80%;
 }
-.story-with-sidebar,
+/* .story-with-sidebar,
 .story-with-sidebar article [data-layout~="cover"],
 .story-with-sidebar article .toc-navigation {
   width: 100%;
-}
+} */
 
-.story-with-sidebar figure svg {
+/* .story-with-sidebar figure svg {
   width: calc(var(--space-2xl) * 2);
   height: calc(var(--space-2xl) * 2);
   padding: var(--space-s);
   border-radius: var(--space-m);
-}
-.story-with-sidebar #cover svg > path {
+} */
+/* .story-with-sidebar #cover svg > path {
   fill: var(--gray-100);
-}
+} */
 
 /*=====  End of Story  ======*/
 
@@ -93,9 +92,9 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 
 [data-markdown] {
   /* Remove width constraints from generated markdown */
-  --measure: 100ch;
+  --measure: 80ch;
   --space: 1em;
-  font-size: var(--step-1);
+  /* font-size: var(--step-1); */
 }
 [data-markdown] p{
   color: var(--gray-600);
@@ -115,13 +114,7 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   counter-reset: list;
   padding-left: 0;
 }
-[data-markdown] h3 {
-  /* font-size: var(--step-2); */
-  /* padding-top: 1em; */
-  /* font-weight: normal; */
-  text-transform: lowercase;
-  /* color: var(--gray-700); */
-}
+
 [data-markdown] code {
   border: 1px solid var(--gray-400);
   background-color: var(--gray-200);
@@ -177,7 +170,7 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   border-bottom-color: var(--gray-900);
 }
 .breadcrumbs-navigation li:not(:last-child)::after {
-  content: " \BB   ";
+  content: " ▶   ";
   margin-left: var(--space-s, 5px);
 }
 .breadcrumbs-navigation li:last-child {
@@ -215,11 +208,11 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 
 .story-card {
   overflow: hidden;
-  padding: var(--space-l) var(--space-xs);
+  padding: var(--space-l) var(--space-s);
   border-radius: var(--border-radius);
   position: relative;
   background-color: var(--gray-50);
-  border: var(--border-thin) solid var(--gray-400);
+  border: var(--border-thin) solid var(--gray-300);
   /* box-shadow: var(--shadow-elevation-low); */
   transition-property: box-shadow, transform;
   transition-duration: 0.3s;
@@ -249,7 +242,7 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 }
 .story-card__title{
   font-family: var(--font-sans-serif);
-  font-weight: bolder;
+  /* font-weight: bolder; */
 }
 .story-card__title:focus {
   outline: 0px;
@@ -321,7 +314,7 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   transform: rotate(90deg);
 }
 [data-accordion] summary ~ *:not(summary) {
-  padding-left: var(--space-l);
+  padding-left: var(--space-s);
   padding-top: var(--space-xs);
   padding-bottom: var(--space-xs);
   color: var(--gray-700);
