--- a/src/pages/categories/category-pagination.njk
+++ b/src/pages/categories/category-pagination.njk
@@ -20,7 +20,7 @@ eleventyComputed:
 </h1>
 <p>
   Here are some stories relating to the subject of {{ category }}.
-  <ul data-layout="grid" role="list" data-props="noPad">
+  <ul class="story-cards" data-layout="grid" data-props="noPad" role="list">
     {% set entries = collections.stories | filterByCategory(category) %}
     {%- for entry in entries %}
       {% include "partials/story-card-entry.njk" %}
