--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,11 +1,11 @@
 <footer class="site-footer" data-layout="switcher" data-props="invert">
     <div class="padded-container" data-layout="switcher" data-props="y:start">
-        <div data-layout="stack" data-props="x:start">
-            <h2 data-heading="5">About</h2>
-            <p>Frontend Stories 2022 ©</p>
+        <div data-layout="stack" data-props="x:start space:2xs">
+            <p data-heading="4" data-font="emoji">{{meta.site_emoji}}</p>
+            <span data-font="sans-serif" data-heading="6">{{meta.site_name}}</span>
         </div>
         <div data-layout="stack" data-props="x:start">
-            <h2 data-heading="5">Categories</h2>
+            <h2 data-heading="6">Categories</h2>
             <div data-layout="cluster">
                 {%- for category in collections.categories %}
                     <a href="/categories/{{ category | slugify }}" data-button="tag">{{ category }}</a>
@@ -13,10 +13,10 @@
             </div>
         </div>
         <nav data-layout="stack" data-props="x:start">
-            <h2 data-heading="5">Links</h2>
+            <h2 data-heading="6">Links</h2>
             <div data-layout="stack" data-props="x:start">
                 {%- for page in collections.webpage %}
-                    <a data-link href="{{ page.url }}">{{ page.data.title }}</a>
+                    <a data-link data-font="sans-serif" href="{{ page.url }}">{{ page.data.title }}</a>
                 {% endfor -%}
             </div>
         </nav>
