--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -170,7 +170,7 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   border-bottom-color: var(--gray-900);
 }
 .breadcrumbs-navigation li:not(:last-child)::after {
-  content: " ▶   ";
+  content: " /   ";
   margin-left: var(--space-s, 5px);
 }
 .breadcrumbs-navigation li:last-child {
@@ -200,6 +200,9 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 .site-footer {
   padding-top: var(--space-l);
   padding-bottom: var(--space-l);
+}
+.site-footer h2{
+  color: var(--gray-500);
 }
 
 /*=============================================
@@ -264,8 +267,17 @@ source: https://codepen.io/thierry/pen/qBqYmgw
   --grid-min-item-size: 30rem;
 }
 
-.story-pagination-navigation__next-button {
+.story-pagination-navigation a:only-child{
+  flex-grow: 0;
+  flex-basis: min(100%, 45ch);
+}
+
+.story-pagination-navigation a.next-button {
   margin-left: auto;
+}
+
+.story-pagination-navigation a.previous-button {
+  margin-right: auto;
 }
 
 .contribute-story-sidebar {
